# PYTHON

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .latexmkrc  .prettierignore  .prettierrc  .testmondata  MAT-305_PWA-1.aux  README.md  _preamble.tex  _quarto.yml  cspell.json  mypy.ini  pyproject.toml  pytest.ini  requirements.freeze.txt  requirements.freeze.uv.txt  requirements.noTorch.txt  ruff.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  deep-review.yml  trufflehog.yml
.mcp/: mcp.json
apps/: README.md
apps/aegis/: pyproject.toml
apps/atlas/: pyproject.toml
apps/citadel/: pyproject.toml
apps/echo/: .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml  spectro3d.py
apps/insight/: pyproject.toml
apps/mu/: pyproject.toml
apps/mu/PALL/MAT-230/docs/: scratchpad.tex
apps/mu/PALL/MAT-230/notebooks/: scratchpad.ipynb
apps/mu/Y2S1/EGR-221/docs/: EGR-221_equations.tex
apps/mu/Y2S1/EGR-261/docs/: EGR-261_equations-full.tex
apps/mu/Y2S1/MAT-305/docs/: MAT-305_PWA-1.aux  MAT-305_PWA-1.out  MAT-305_PWA-1.tex
apps/mu/Y2S1/PHY-202L/data/raw/: Physics-II_Lab-3.xlsx  Physics-II_Lab-4.xlsx
apps/mu/Y2S1/PHY-202L/docs/: Lab 5.atfi  Lab 5.aux  Lab 5.fdb_latexmk  Lab 5.fls  Lab 5.out  Lab 5.tex  PHY-202L_Lab-3.tex  PHY-202L_Lab-4.tex  PHY-202L_Lab-6.tex
apps/mu/Y2S1/PHY-202L/notebooks/: Lab_5.ipynb  template.ipynb
apps/mu/docs/: test.tex
apps/mu/tools/: RickRoll-pdf.py
apps/oracle/: pyproject.toml
apps/panel/: csv_viewer.py  demo_quick.py  pyproject.toml
apps/prism/: .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt
apps/pulse/: pyproject.toml
apps/streamlit/: csv_explorer.py  pyproject.toml  quick_demo.py
docs/: latex-example.tex  paper.tex
notebooks/: 00_welcome.ipynb  _template.ipynb  pendulum_demo.ipynb  sos_demo.ipynb
notebooks/calc/: 01_tangent_sliders.ipynb  02_3d_surfaces.ipynb
notebooks/calc_demo/: 01_tangent_sliders.ipynb  02_3d_surfaces.ipynb
notebooks/demos/: 00_welcome.ipynb  Wolfram_demo.ipynb  _template.ipynb  python_demo.ipynb  sos_demo.ipynb
notebooks/ml/: 03_cuda_onnx.ipynb
notebooks/practice/: projectile-motion_practice_data.ipynb  (+1 more)
quarto/: _quarto.yml
tests/: test_mathutils.py
(+48 files in other folders)
