[project]
name = "mu-coursework"
version = "0.1.0"
description = "Coursework notebooks and scripts for MU classes"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.0",
    "numpy>=1.24",
    "pandas>=1.5",
    "sympy>=1.12",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
lab = [
    "scipy>=1.10",
    "plotly>=5.15",
]
